--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-
     <h1>Inventario TODOPIZARRAS</h1>
     <div class="spinnerContainer">
         <div id="spinner" class="spinner"></div>
     </div>
+
+    <!-- https://cdn0.iconfinder.com/data/icons/slim-square-icons-basics/100/basics-19-32.png -->
+    <input type="text" id="buscador" placeholder="Buscar Productos...">
 
     <table>
         <thead>
