--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <tr>
                 <th>Nombre</th>
                 <th>Cantidad</th>
+                <th>Plataforma</th>
             </tr>
         </thead>
         <tbody id="tbodyTable">
